Fix main content centering and box-shadow.
Since the `main` element no longer has `margin: 0 auto;`, child elements need to be centered properly for wide viewports. The gutter on the grid was covering the box shadow so it needed just enough margin to keep the box-shadow visible and needed to be a different element from the centered one.

--- a/docs/components/layout/layout.css
+++ b/docs/components/layout/layout.css
@@ -33,14 +33,8 @@ rp-nav-pane {
 
 main {
     grid-area: main;
-    padding: 0 1rem;
-    margin: 1rem 0;
 
-    width: calc(100% - 2rem /* padding */);
-    max-width: 936px /* arbitrary number from Bazel docs */;
-
-    background-color: white;
-    box-shadow: 0 0 3px 0 gray;
+    width: 100%;
 
     /*
      * IMPORTANT! The `main` content doesn't scroll independently, in fact it
